--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.9.1",
-    "@strapi/plugin-users-permissions": "4.9.1",
     "@strapi/plugin-i18n": "4.9.1",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.9.1",
+    "@strapi/strapi": "4.9.1",
+    "better-sqlite3": "7.4.6",
+    "slugify": "^1.6.6"
   },
   "author": {
     "name": "onissen"
