--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.9.2",
-    "@strapi/plugin-users-permissions": "4.9.2",
-    "@strapi/strapi": "4.9.2",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-i18n": "4.10.1",
+    "@strapi/plugin-users-permissions": "4.10.1",
+    "@strapi/strapi": "4.10.1",
+    "better-sqlite3": "7.4.6",
+    "strapi-plugin-slugify": "^2.3.2"
   },
   "author": {
     "name": "onissen"
