New way of cert_docs

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-users-permissions": "4.10.6",
     "@strapi/strapi": "4.10.6",
     "better-sqlite3": "7.4.6",
+    "koa-cors": "^0.0.16",
     "strapi-plugin-slugify": "^2.3.2"
   },
   "author": {
