No multiple certificate_doc items

--- a/src/components/cdl-tasks/cdl-tasks.json
+++ b/src/components/cdl-tasks/cdl-tasks.json
@@ -1,7 +1,8 @@
 {
   "collectionName": "components_cdl_tasks_cdl_tasks",
   "info": {
-    "displayName": "CDL Tasks"
+    "displayName": "CDL Tasks",
+    "description": ""
   },
   "options": {},
   "attributes": {
@@ -10,13 +11,14 @@
       "relation": "oneToOne",
       "target": "plugin::users-permissions.user"
     },
-    "certifcate_doc": {
+    "certificate_doc": {
+      "type": "media",
+      "multiple": false,
+      "required": false,
       "allowedTypes": [
         "images",
         "files"
-      ],
-      "type": "media",
-      "multiple": true
+      ]
     },
     "signed_date": {
       "type": "date"
